only type parameters from the same type parameters clause are relevant in #SCL-7139

--- a/resources/org/jetbrains/plugins/scala/ScalaBundle.properties
+++ b/resources/org/jetbrains/plugins/scala/ScalaBundle.properties
@@ -349,6 +349,7 @@ contravariant.type.invariant.position.of.value=Contravariant type {0} occurs in 
 abstract.member.not.have.private.modifier=Abstract member may not have private modifier
 missing.arguments.for.method=Missing arguments for method {0} and is not a partially applied function. Add more arguments or insert a placeholder.
 lower.bound.conform.to.upper=Lower bound doesn't conform to upper bound
+has.itself.as.bound={0} has itself as a bound
 illegal.secondary.constructors.value.class=Secondary constructors are not allowed in value classes
 value.class.can.have.only.one.parameter=Value classes can have only one parameter
 value.class.can.have.only.val.parameter=Value classes can have only one non-private val parameter
